--- a/css/estilo.css
+++ b/css/estilo.css
@@ -428,7 +428,7 @@ span.form-control-feedback{
   border: 0px;
 }
 body#cadastro{
-  background: #f5f5f5;
+ /* background: #f5f5f5;*/
 }
 
 @media (max-width: 766px){
@@ -457,3 +457,32 @@ label.error{
   top: 20px;
   font-size: 9px;
 }
+.background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1;
+
+  display: block;
+  background-image: url('https://ouiser624.files.wordpress.com/2014/03/168813140.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: auto%;
+}
+
+div #alguem-le-isso{
+    background-color: #f5f5f5;
+    color: #333447;
+    margin-bottom: 30px;
+    margin-top: 90px;
+    border-radius: 10px;
+    height: 40em;
+    right: 30px;
+    box-shadow: #728099 0 1px 5px 0;
+}
+.shadow-text{
+  text-shadow: #ccc 0px 1px 1px;
+}
+
