--- a/css/estilo.css
+++ b/css/estilo.css
@@ -469,7 +469,7 @@ label.error{
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: auto%;
+  height: 100%;
 }
 
 div #alguem-le-isso{
@@ -479,7 +479,6 @@ div #alguem-le-isso{
     margin-top: 90px;
     border-radius: 10px;
     height: 40em;
-    right: 30px;
     box-shadow: #728099 0 1px 5px 0;
 }
 .shadow-text{
